# GOL1

./: CMakeLists.txt  Constants.h  GOL1.sln  GOL1.vcxproj  GOL1.vcxproj.filters  GOLConfig.h.in  Interface.cpp  StatusText.h
include/: Board.h  Interface.h  StateField.h  dbg.h
scripts/: merge.py
src/: Board.cpp  Interface.cpp  StateField.cpp  StatusText.cpp  main.cpp
